# hackathon_2023

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  create_sample_inputs.ipynb  pyproject.toml  test_nodes.ipynb
.github/workflows/: linting.yaml  pytest.yaml
data/: Registrierung_dummy_data.xlsx  connections.csv  hallways.csv  positions.txt  poster_registrations.ods  poster_registrations.xlsx  relevant_rooms.csv
hackathon/: __init__.py  app.py  gml2json.py  posterspacer.py  room_assignment.py  test_similarity.py
hackathon/similarity/: __init__.py  mock_data_2d.py
hackathon/time_assignment/: __init__.py  create_similarity_matrix.py  loss_functions.py  main_calc_time.py  opt_space.py  optimizers.py  utils.py
input/: build_graph.py  csvreader.py  posterspacer.py
room-vis/: package-lock.json  package.json
room-vis/src/components/: PosterGlyph.svelte  PosterLegendTable.svelte
room-vis/src/routes/: +layout.js  +page.js  +page.svelte
room-vis/static/data/: graph_with_random_poster_assignment.json  roomlayout.json
sample_inputs/: graph_with_random_poster_assignment.gml  graph_with_random_poster_assignment.json  graph_without_poster_assignment.gml  poster_data.csv
tests/: conftest.py
tests/unit_tests/: test_similarity.py  test_something.py
