[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = "Tool to scheduel the postersession at the Status Seminar"
authors = ["Participants of the PhD retreat"]
license = "MIT"
readme = "README.md"
packages = [{include = "hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
networkx = "^3.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"

[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.coverage.run]
branch = true
source = ["hackathon"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
show_missing = true
